Fixed Home page on mobile and options in ExamMain margins

--- a/src/assets/styles/ExamMain.css
+++ b/src/assets/styles/ExamMain.css
@@ -56,15 +56,19 @@
     
     @media (max-width: 768px) {
         .pregunta {
-            margin-bottom: 10px;
-            margin-left: 20px;
-            margin-right: 20px;
+            margin-bottom: 30px;
+        }
+
+        .container {
+            margin-left: 8vw;
+            margin-right: 8vw;
         }
     
         .solucion {
             margin-top: 20px;
             max-width: 300px;
         }
+        
     }
 
 .nextQuestion {
