--- a/src/assets/styles/Home.css
+++ b/src/assets/styles/Home.css
@@ -47,11 +47,11 @@
     .home {
         flex-direction: column;
         align-items: center;
-        height: 85vh;
+        height: auto;
     }
 
     .home__title {
-        margin-top: 150px;
+        margin-top: 110px;
         margin-bottom: 50px;
         font-size: 90px; /* Increase font size */
         text-align: center; /* Center the text */
@@ -64,6 +64,7 @@
 
     .home__button {
         margin-top: 50px;
+        margin-bottom: 100px;
     }
 
     .home__right {
